[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/mainMenu/brickSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/MainMenuAnimationPlayer.gd" type="Script" id=3]
[ext_resource path="res://scenes/mainMenu/bodySprite.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/mainMenu/faceSprite.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/ui/fonts/digitalDisco.tres" type="DynamicFont" id=6]
[ext_resource path="res://scenes/end_of_round_screen.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/lobby.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/ui/pointers/pointer.svg" type="Texture" id=9]
[ext_resource path="res://scripts/cursor.gd" type="Script" id=10]
[ext_resource path="res://assets/ui/pointers/pointer_outline.svg" type="Texture" id=11]
[ext_resource path="res://scripts/mainMenuSprite.gd" type="Script" id=12]
[ext_resource path="res://scripts/wallpaper.gd" type="Script" id=13]

[sub_resource type="Animation" id=1]
resource_name = "scroll"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -166, -131 ), Vector2( 44, 79 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "\"scroll\"", -1, 1.0, false ],
"method": "play"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../background:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -64, -64 ) ]
}

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Theme" id=7]
default_font = ExtResource( 6 )
Button/colors/font_color = Color( 1, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0.466667, 0.466667, 0.466667, 1 )
Button/colors/font_color_hover = Color( 0.8, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 1, 0.498039, 0.498039, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 2 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )

[sub_resource type="StyleBoxEmpty" id=8]

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wallpaper" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="background" type="Node2D" parent="wallpaper"]
position = Vector2( -64, -64 )

[node name="Sprite" parent="wallpaper/background" instance=ExtResource( 2 )]

[node name="foreground" type="Node2D" parent="wallpaper"]
position = Vector2( 44, 79 )
script = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="wallpaper/foreground"]
anims/scroll = SubResource( 1 )
script = ExtResource( 3 )

[node name="bodies" type="Node2D" parent="wallpaper/foreground"]

[node name="Sprite" parent="wallpaper/foreground/bodies" instance=ExtResource( 4 )]

[node name="faces" type="Node2D" parent="wallpaper/foreground"]

[node name="Sprite" parent="wallpaper/foreground/faces" instance=ExtResource( 5 )]
frame = 27

[node name="canvas" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="canvas"]

[node name="menuItems" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 240.0
margin_right = 264.0
margin_bottom = 576.0

[node name="lbl_play" type="Label" parent="menuItems"]
margin_right = 240.0
margin_bottom = 64.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Play"
valign = 1

[node name="Label2" type="Label" parent="menuItems/lbl_play"]
margin_top = 8.0
margin_right = 240.0
margin_bottom = 72.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Play"
valign = 1

[node name="Label3" type="Label" parent="menuItems/lbl_play"]
margin_left = 4.0
margin_top = 4.0
margin_right = 244.0
margin_bottom = 68.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Play"
valign = 1

[node name="Label4" type="Label" parent="menuItems/lbl_play"]
margin_left = -4.0
margin_top = 4.0
margin_right = 236.0
margin_bottom = 68.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Play"
valign = 1

[node name="btn_play" type="Button" parent="menuItems/lbl_play"]
margin_left = -1.00136e-05
margin_top = 4.0
margin_right = 240.0
margin_bottom = 68.0
rect_min_size = Vector2( 240, 64 )
theme = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_hover = Color( 0.498039, 1, 0.498039, 1 )
custom_colors/font_color_pressed = Color( 0, 0.8, 0, 1 )
text = "Play"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_lobby" type="Label" parent="menuItems"]
margin_top = 68.0
margin_right = 240.0
margin_bottom = 132.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lobby"
valign = 1

[node name="Label2" type="Label" parent="menuItems/lbl_lobby"]
margin_top = 8.0
margin_right = 240.0
margin_bottom = 72.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lobby"
valign = 1

[node name="Label3" type="Label" parent="menuItems/lbl_lobby"]
margin_left = 4.0
margin_top = 4.0
margin_right = 244.0
margin_bottom = 68.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lobby"
valign = 1

[node name="Label4" type="Label" parent="menuItems/lbl_lobby"]
margin_left = -4.0
margin_top = 4.0
margin_right = 236.0
margin_bottom = 68.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lobby"
valign = 1

[node name="btn_lobby" type="Button" parent="menuItems/lbl_lobby"]
margin_left = -1.00136e-05
margin_top = 4.26352
margin_right = 240.0
margin_bottom = 68.2635
rect_min_size = Vector2( 240, 64 )
theme = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
custom_colors/font_color_hover = Color( 0.498039, 0.498039, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0.8, 1 )
text = "Lobby"
align = 0

[node name="lbl_servers" type="Label" parent="menuItems"]
margin_top = 136.0
margin_right = 240.0
margin_bottom = 200.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Servers"
valign = 1

[node name="Label2" type="Label" parent="menuItems/lbl_servers"]
margin_top = 8.0
margin_right = 240.0
margin_bottom = 72.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Servers"
valign = 1

[node name="Label3" type="Label" parent="menuItems/lbl_servers"]
margin_left = 4.0
margin_top = 4.0
margin_right = 244.0
margin_bottom = 68.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Servers"
valign = 1

[node name="Label4" type="Label" parent="menuItems/lbl_servers"]
margin_left = -4.0
margin_top = 4.0
margin_right = 236.0
margin_bottom = 68.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Servers"
valign = 1

[node name="btn_lobby" type="Button" parent="menuItems/lbl_servers"]
margin_left = -1.00136e-05
margin_top = 3.73648
margin_right = 240.0
margin_bottom = 67.7365
rect_min_size = Vector2( 240, 64 )
theme = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.498039, 1, 1 )
custom_colors/font_color_pressed = Color( 0.8, 0, 0.8, 1 )
text = "Servers"
align = 0

[node name="lbl_settings" type="Label" parent="menuItems"]
margin_top = 204.0
margin_right = 240.0
margin_bottom = 268.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Settings"
valign = 1

[node name="Label2" type="Label" parent="menuItems/lbl_settings"]
margin_top = 8.0
margin_right = 240.0
margin_bottom = 72.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Settings"
valign = 1

[node name="Label3" type="Label" parent="menuItems/lbl_settings"]
margin_left = 4.0
margin_top = 4.0
margin_right = 244.0
margin_bottom = 68.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Settings"
valign = 1

[node name="Label4" type="Label" parent="menuItems/lbl_settings"]
margin_left = -4.0
margin_top = 4.0
margin_right = 236.0
margin_bottom = 68.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Settings"
valign = 1

[node name="btn_settings" type="Button" parent="menuItems/lbl_settings"]
margin_top = 3.73651
margin_right = 240.0
margin_bottom = 67.7365
rect_min_size = Vector2( 240, 64 )
theme = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0.498039, 1 )
custom_colors/font_color_pressed = Color( 0.8, 0.8, 0, 1 )
text = "Settings"
align = 0

[node name="lbl_quit" type="Label" parent="menuItems"]
margin_top = 272.0
margin_right = 240.0
margin_bottom = 336.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
valign = 1

[node name="Label2" type="Label" parent="menuItems/lbl_quit"]
margin_top = 8.0
margin_right = 240.0
margin_bottom = 72.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
valign = 1

[node name="Label3" type="Label" parent="menuItems/lbl_quit"]
margin_left = 4.0
margin_top = 4.0
margin_right = 244.0
margin_bottom = 68.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
valign = 1

[node name="Label4" type="Label" parent="menuItems/lbl_quit"]
margin_left = -4.0
margin_top = 4.0
margin_right = 236.0
margin_bottom = 68.0
rect_min_size = Vector2( 240, 64 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
valign = 1

[node name="btn_quit" type="Button" parent="menuItems/lbl_quit"]
margin_left = 0.38834
margin_top = 3.7226
margin_right = 240.389
margin_bottom = 67.7226
rect_min_size = Vector2( 240, 64 )
theme = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.498039, 0.498039, 1 )
custom_colors/font_color_pressed = Color( 0.8, 0, 0, 1 )
text = "Quit"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="end_of_round_screen" parent="." instance=ExtResource( 7 )]
visible = false

[node name="lobby" parent="." instance=ExtResource( 8 )]
visible = false

[node name="cursors" type="Node2D" parent="."]
z_index = 1000

[node name="cursor" type="Sprite" parent="cursors"]
self_modulate = Color( 1, 1, 0, 1 )
texture = ExtResource( 9 )
centered = false
script = ExtResource( 10 )

[node name="outline" type="Sprite" parent="cursors/cursor"]
self_modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 11 )
centered = false

[connection signal="animation_finished" from="wallpaper/foreground/AnimationPlayer" to="wallpaper/foreground/AnimationPlayer" method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="menuItems/lbl_play/btn_play" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="menuItems/lbl_lobby/btn_lobby" to="." method="_on_btn_lobby_pressed"]
[connection signal="pressed" from="menuItems/lbl_quit/btn_quit" to="." method="_on_btn_quit_pressed"]
